Fixed spacing between bottom bolck & footer view-van.html

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -532,7 +532,6 @@ ul {
 }
 
 .footer-margins {
-    margin-top: 50px;
     padding: 2em;
 }
 
